--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
         dotnet-version: 3.1
     #Substitutes variables 
     - name: App Settings Variable Substitution
-      uses: microsoft/variable-substitution@v1 // name of Github action
+      uses: microsoft/variable-substitution@v1
       with:
         file: "./pages/Index.razor"
       env:
